# pointing-direction

./: CMakeLists.txt  CMakeLists.txt.user.4.9-pre1  README.md
cmake/: FindAstra.cmake
include/: Utilities.h  pointed_object.h
src/: Utilities.cpp  gesture_recognition.cpp  pointed_object.cpp
